--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^7.0.13",
     "pg": "^8.11.1",
     "qrcode": "^1.5.3"
   }
